# AscentHaxe

./: .gitignore  cpp.hxml  csharp.hxml  questBuild.bat  test.hxml
quest-build/: CMakeLists.txt  qpm.json  qpm.shared.json  qpm_defines.cmake
quest-build/.cache/clangd/index/: AndroidCompat.cpp.4726FC787FBF4607.idx  Anon.cpp.886B0BF402781CFE.idx  Anon.h.CE142685B06359CB.idx  Array.cpp.EC6617639D7A6BA4.idx  Array.h.3E6D9EB9A5CD18A2.idx  ArrayBuiltin.cpp.73A7313454FE55EB.idx  ArrayVirtual.cpp.0F5C73840C7DCF5D.idx  AscentLang.cpp.EFEDABFDFBA9B59E.idx  AscentLang.h.E99E63AC72A4A6DB.idx  Boot.cpp.85A561966072A300.idx  Boot.h.20D4890F571AF6AB.idx  CFFI.cpp.EEB79284D67BB7E4.idx  CFFI.h.A179DC4C4C908161.idx  CFFIAPI.h.7164B81BD85700DF.idx  Class.cpp.3EF55B83F47CCEEB.idx  Class.h.6AEF5BC888CB92B3.idx  CppInt32__.h.9FD4DA3AAD865583.idx  Cppia.cpp.CB9A81B10EB77FC9.idx  Cppia.h.FC78A6133085DB68.idx  CppiaClasses.cpp.5A2F4196AA9CACCA.idx  CppiaCompiler.cpp.048C335CBF481DE7.idx  CppiaCtx.cpp.A2C1B378616963B8.idx  CppiaFunction.cpp.50A9B5D47E5B3397.idx  CppiaModule.cpp.766A92860ADDD2A1.idx  CppiaOps.inc.FC2BDE2746269632.idx  CppiaStream.h.71FB0F597B52974B.idx  CppiaVars.cpp.E75FD30ED4545C7A.idx  Date.cpp.90B2AC94D6DB35CF.idx  Debug.cpp.5BE04BC731CF6558.idx  Debug.h.92591EA7A66F966A.idx  Debugger.cpp.09641BCB77D79A98.idx  Dynamic.cpp.9B1E7336DB9F20D1.idx  Dynamic.h.C44F0D62F9721392.idx  DynamicImpl.h.A4A4CCE44CCD25EC.idx  Enum.cpp.E3394C4B1A120281.idx  Enum.h.1F783DE8120114E7.idx  ErrorCodes.h.659A2ABE5D429B4B.idx  ExampleMain.cpp.A41D3A8979B7F126.idx  FastIterator.h.FD61F097A1C0F34E.idx  FieldRef.h.DF526E855A2138C5.idx  (+80 more)
quest-build/hxcpp/include/hx/: Object.h
quest-build/hxcpp/src/hx/: StdLibs.cpp
quest-build/shared/: AscentLang.hpp  AscentLanguage.hpp  AscentVariableMap.hpp
quest-build/src-interop/: interop.cpp
src/: AscentEvaluator.hx  AscentLang.hx  AscentVariableMap.hx
src/Functions/: AscentFunctions.hx
src/Parser/: AscentParser.hx  Expression.hx  FunctionDefinition.hx
src/Splitter/: AscentSplitter.hx  TokenContainer.hx
src/Tokenizer/: AscentTokenizer.hx  Token.hx  Tokenizer.hx
src/Utility/: StringReader.hx  Utility.hx
